# valicore_rust

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
examples/: basic_campaign.yaml
k8s/: configmap.yaml  cronjob.yaml  job.yaml  kustomization.yaml
observability/: prometheus.yml
src/: lib.rs
src/engine/: campaign.rs  instrument.rs  metrics.rs  mod.rs  observability.rs  oscilloscope.rs  runner.rs  save.rs
src/signal/: fft.rs  mod.rs  statistics.rs  windowing.rs
src/valicore/: __init__.py  __main__.py  core.py
src/valicore/campaign/: loader.py  model.py  runner.py
src/valicore/cli/: main.py
src/valicore/driver/: __init__.py  _fallback.py  _oscilloscope_driver.py
src/valicore/instruments/: __init__.py  base.py  keysight.py  rigol.py  rohde_schwarz.py
src/valicore/reporting/: __init__.py  html_reporter.py  pdf_reporter.py
src/valicore/specs/: oscilloscope.yaml
terraform/: main.tf
tests/: test_campaign.py  test_instruments.py  test_oscilloscope.py  test_reporter.py  test_signal_processing.py
