[package]
name = "valicore-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "valicore_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
rustfft = "6"
num-complex = "0.4"
wide = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
hdf5 = { version = "0.8", optional = true }

[features]
default = []
hdf5 = ["dep:hdf5"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
