[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "valicore"
version = "0.1.0"
description = "SCPI oscilloscope driver and signal analysis in Python + Rust"
authors = [{ name = "Valicore Contributors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
dependencies = [
    "pyvisa>=1.14",
    "numpy>=1.24",
]

[project.optional-dependencies]
hdf5 = ["h5py>=3.0"]

[project.urls]
Homepage = "https://github.com/valicore/valicore"

[tool.maturin]
python-source = "src"
module-name = "valicore._rust"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
